src/css/footer.css
.page-footer {
  border-radius: 30px;
  padding: 40px 28px 28px 28px;
  background: #0c0c0c;
}
.container-info {
  margin-bottom: 92px;
}
.footer-logo {
  display: block;
  font-size: 16px;
  letter-spacing: -0.02em;
  color: #fbfbfb;
  margin-bottom: 20px;
}
.sotial-list {
  display: flex;
  justify-content: flex-start;
  gap: 10px;
  margin-bottom: 20px;
}
.sotial-link {
  width: 34px;
  height: 34px;
  display: flex;
  align-items: center;
  justify-content: center;
  fill: #fbfbfb;
  opacity: 0.8;
  border: 1px solid rgba(251, 251, 251, 0.1);
  border-radius: 10px;
  transition: opasity 250ms;
}
.sotial-link:hover,
.sotial-link:focus {
  opacity: 1;
}
.telefon {
  display: block;
  font-size: 12px;
  line-height: 1.33;
  text-align: center;
  color: #fbfbfb;
  border: 1px solid rgba(251, 251, 251, 0.2);
  border-radius: 16px;
  max-width: 152px;
  max-height: 44px;
  padding: 14px 0;
  margin-bottom: 40px;
}
.text-info {
  font-weight: 600;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: -0.02em;
  text-align: center;
  color: #fbfbfb;
}
.footer-page-nav {
  display: flex;
  gap: 49px;
  align-items: baseline;
  border-bottom: 1px solid rgba(251, 251, 251, 0.1);
  padding-bottom: 24px;
  margin-bottom: 24px;
}
.footer-nav-list {
  display: flex;
  flex-wrap: wrap;
  width: 147px;
  padding: 0;
  gap: 8px 16px;
}
.footer-nav-link {
  font-weight: 500;
  font-size: 12px;
  line-height: 1.33;
  text-align: center;
  color: #fbfbfb;
}
.adress {
  font-weight: 500;
  font-size: 12px;
  font-style: normal;
  line-height: 1.33;
  color: #fbfbfb;
}
.text-rights-reserved {
  font-weight: 500;
  font-size: 10px;
  line-height: 1.4;
  letter-spacing: -0.02em;
  color: rgba(251, 251, 251, 0.5);
  opacity: 0.9;
  margin-bottom: 8px;
}
.rights-reserved-list {
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  gap: 20px;
}
.text-rights-link {
  font-weight: 500;
  font-size: 10px;
  line-height: 1.4;
  letter-spacing: -0.02em;
  text-align: right;
  color: rgba(251, 251, 251, 0.5);
}

@media screen and (min-width: 768px) {
  .page-footer {
    padding: 40px 40px 28px 40px;
  }
  .container-info {
    position: relative;
    margin-bottom: 100px;
  }
  .page-info {
    margin-bottom: 86px;
  }
  .footer-logo {
    font-size: 20px;
  }
  .sotial-link {
    width: 36px;
    height: 36px;
  }
  .icon-sotial {
    width: 20px;
    height: 20px;
  }

  .telefon {
    position: absolute;
    top: 0;
    right: 0;
    font-size: 14px;
    line-height: 1.29;
    min-width: 160px;
    max-height: 48px;
    padding: 15px 0;
    margin: 0;
  }
  .text-info {
    font-size: 28px;
    line-height: 1.14;
    max-width: 524px;
    margin: 0 50px;
  }
  .footer-page-nav {
    gap: 62px;
    align-items: baseline;
    padding-bottom: 28px;
    margin-bottom: 28px;
  }
  .footer-nav-list {
    flex-direction: row;
    width: 400px;
    padding: 0;
    gap: 0 19px;
  }
  .footer-nav-link {
    font-size: 14px;
    line-height: 1.29;
  }
  .adress {
    font-size: 14px;
    line-height: 1.29;
    width: 162px;
  }

  .rights-reserved {
    display: flex;
    justify-content: space-between;
  }

  .text-rights-reserved {
    margin-bottom: 0;
    font-size: 14px;
    line-height: 1.29;
  }

  .text-rights-link {
    font-size: 14px;
    line-height: 1.29;
  }
}

@media screen and (min-width: 1280px) {
  .container-footer {
    max-width: 1216px;
    border-radius: 30px;
    padding: 40px 40px 28px 40px;
    background: #0c0c0c;
  }

  .page-footer {
    padding: 0;
  }
  .page-info {
    margin-bottom: 126px;
  }

  .text-info {
    position: absolute;
    top: 0;
    left: 306px;
    right: 307px;
    max-width: 523px;
    margin: 0;
  }
  .footer-page-nav {
    justify-content: space-between;
  }
  .footer-nav-list {
    width: 505px;
    padding: 0;
    gap: 0 40px;
  }
}

